edited background gradient

--- a/shoppies/src/App.css
+++ b/shoppies/src/App.css
@@ -7,6 +7,6 @@ body {
   margin: 0px;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to right, #f1ffd3, #fffadf);
+  background: linear-gradient(to right, #efffcd, #fff8d1);
   font-family: "Barlow", sans-serif;
 }
