changed height of App

--- a/shoppies/src/App.css
+++ b/shoppies/src/App.css
@@ -6,7 +6,7 @@ body {
 .App {
   margin: 0px;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(to right, #efffcd, #fff8d1);
   font-family: "Barlow", sans-serif;
 }
