--- a/shoppies/src/components/Movies/style.css
+++ b/shoppies/src/components/Movies/style.css
@@ -16,8 +16,49 @@
 
 .movie {
   position: relative;
-  height: 250px;
+  height: 300px;
   width: 20%;
-  border: 2px solid black;
+  /*border: 2px solid black;*/
   margin: 25px 20px;
+  text-align: center;
+  animation: 0.4s enter ease-in-out;
+}
+
+.movie img {
+  display: block;
+  max-width: 100%;
+  max-height: 80%;
+  margin: auto;
+}
+
+.no-img {
+  width: 100%;
+  height: 80%;
+  background-color: rgb(212, 212, 212);
+  opacity: 0.5;
+}
+
+.movie span {
+  display: inline-block;
+}
+
+.title {
+  margin-top: 7px;
+  font-weight: 400;
+  width: 100%;
+}
+
+.year {
+  font-weight: 500;
+}
+
+@keyframes enter {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
