--- a/shoppies/src/components/Movies/style.css
+++ b/shoppies/src/components/Movies/style.css
@@ -32,6 +32,12 @@
   margin: auto;
 }
 
+.nominated img,
+.nomimated .no-img {
+  opacity: 0.5;
+  transition: 0.4s ease;
+}
+
 .no-img {
   width: 100%;
   height: 80%;
@@ -43,7 +49,6 @@
 .no-img:hover {
   transform: scale(1.05);
   transition: 0.4s ease;
-  opacity: 0.9;
   cursor: pointer;
 }
 
